--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Build.loader.js";
+      var loaderUrl = buildUrl + "/BUILD.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/Build.data",
-        frameworkUrl: buildUrl + "/Build.framework.js",
-        codeUrl: buildUrl + "/Build.wasm",
+        dataUrl: buildUrl + "/BUILD.data",
+        frameworkUrl: buildUrl + "/BUILD.framework.js",
+        codeUrl: buildUrl + "/BUILD.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "MetaMinds Group",
         productName: "MetaMinds -Template",
